--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!--<li>併せて、イベントを宣伝するような広告の設置を想定し、広告を見た歩行者がイベントへの興味を増し、イベント実施場所に近づくような経路変更を行うモデルを作成しました。</li>-->
 <!--</ul>-->
 <!--<p><img src="doc/simulation-algorithm.png" alt="simulation-algorithm"></p>-->
-<h2 id="procedure">3．利用手順</h2>
+<h2 id="procedure">利用手順</h2>
 <p>利用手順として、インストール方法、インストール後の使い方、動作環境、前提ソフトウェアを記載します。
     なお、使用にあたっては、artisoc Cloud(<a href = "https://mas.kke.co.jp/artisoccloud/">https://mas.kke.co.jp/artisoccloud/</a>)のインストールを前提としています。
 artisocの使用マニュアルはartisoc Cloudログイン後取得することが可能です。
